# any

./: .gitignore  CMakeLists.txt  README.md
any/: CMakeLists.txt
any/include/any/: algorithm.h  concepts.h  iterator.h  numeric.h  ostream.h  ranges.h
any/include_private/concepts/: streamable.h
any/include_private/iterable/: ostream.h
any/include_private/iterator/: iterator.h
any/include_private/numeric/: ranges_iota.h
any/include_private/ranges/: iterable.h
any/include_private/sort/: inplace_bubble.h  ranges_inplace_bubble.h
examples/: CMakeLists.txt  custom_range.cpp  range_based_inplace_bubble.cpp
examples/cmake/: utils.cmake
